--- a/TU_datasets/k_fold_cross_validation_linear_classifier_ptc.ipynb
+++ b/TU_datasets/k_fold_cross_validation_linear_classifier_ptc.ipynb
@@ -159,7 +159,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[01.27.25 21:52:12] Using single-gpu training\n"
+      "[02.14.25 09:13:11] Using single-gpu training\n"
      ]
     }
    ],
@@ -185,7 +185,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[01.27.25 21:52:12] Using random seed 2...\n"
+      "[02.14.25 09:13:11] Using random seed 2...\n"
      ]
     }
    ],
@@ -520,12 +520,11 @@
     "    test_indices.append(torch.from_numpy(np.loadtxt(test_filename, dtype=int)).to(torch.long))\n",
     "\n",
     "if args.feature_augmentation:\n",
-    "    file_name = 'train_test_splits_feat.txt'\n",
+    "    train_test_filename = os.path.join(path, '10fold_idx', 'train_idx-{}.txt'.format(i + 2))\n",
+    "    train_test_indices.append(torch.from_numpy(np.loadtxt(train_test_filename, dtype=int)).to(torch.long))\n",
     "else:\n",
-    "    file_name = 'train_test_splits_struct.txt'\n",
-    "    \n",
-    "train_test_filename = os.path.join(path, '10fold_idx', file_name)\n",
-    "train_test_indices.append(torch.from_numpy(np.loadtxt(train_test_filename, dtype=int)).to(torch.long))"
+    "    train_test_filename = os.path.join(path, '10fold_idx', 'train_idx-{}.txt'.format(i + 3))\n",
+    "    train_test_indices.append(torch.from_numpy(np.loadtxt(train_test_filename, dtype=int)).to(torch.long))"
    ]
   },
   {
@@ -600,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "dcb47747",
    "metadata": {},
    "outputs": [
@@ -608,14 +607,27 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "(T):  20%|████████                                | 20/100 [00:19<01:14,  1.08it/s, loss=3.04]"
+      "(T):  19%|███████▌                                | 19/100 [00:23<02:06,  1.56s/it, loss=4.77]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 20, Loss: 1.9233\n",
+      "Epoch: 20, Loss: 1.9233\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "(T):  20%|████████                                | 20/100 [00:25<02:16,  1.71s/it, loss=3.04]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Epoch: 20, Loss: 3.0351\n"
      ]
     },
@@ -623,14 +635,27 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "(T):  40%|████████████████                        | 40/100 [00:37<00:56,  1.06it/s, loss=3.88]"
+      "(T):  39%|███████████████▌                        | 39/100 [00:56<01:24,  1.39s/it, loss=4.98]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 40, Loss: 2.8883\n",
+      "Epoch: 40, Loss: 2.8883\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "(T):  40%|████████████████                        | 40/100 [00:58<01:24,  1.40s/it, loss=3.88]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Epoch: 40, Loss: 3.8829\n"
      ]
     },
@@ -638,7 +663,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "(T):  60%|████████████████████████                | 60/100 [00:56<00:37,  1.07it/s, loss=2.89]"
+      "(T):  60%|████████████████████████                | 60/100 [01:26<00:56,  1.41s/it, loss=2.89]"
      ]
     },
     {
@@ -653,37 +678,28 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "(T):  80%|████████████████████████████████        | 80/100 [01:15<00:18,  1.07it/s, loss=2.84]"
+      "(T):  79%|████████████████████████████████▍        | 79/100 [01:56<00:36,  1.73s/it, loss=1.9]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 80, Loss: 1.3829\n",
+      "Epoch: 80, Loss: 1.3829\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "(T):  80%|████████████████████████████████        | 80/100 [01:58<00:34,  1.72s/it, loss=2.84]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Epoch: 80, Loss: 2.8393\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "(T): 100%|███████████████████████████████████████| 100/100 [01:34<00:00,  1.06it/s, loss=1.35]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 100, Loss: 1.0099\n",
-      "Epoch: 100, Loss: 1.3472\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
      ]
     }
    ],
@@ -699,34 +715,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "088711f0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "(LR): 100%|█████████████████████████| 5000/5000 [00:01<00:00, best test F1Mi=0.657, F1Ma=0.62]\n",
-      "(LR): 100%|████████████████████████| 5000/5000 [00:01<00:00, best test F1Mi=0.657, F1Ma=0.655]\n",
-      "(LR): 100%|████████████████████████| 5000/5000 [00:01<00:00, best test F1Mi=0.657, F1Ma=0.657]\n",
-      "(LR): 100%|█████████████████████████| 5000/5000 [00:01<00:00, best test F1Mi=0.657, F1Ma=0.62]\n",
-      "(LR): 100%|████████████████████████| 5000/5000 [00:01<00:00, best test F1Mi=0.686, F1Ma=0.686]\n",
-      "(LR): 100%|████████████████████████| 5000/5000 [00:01<00:00, best test F1Mi=0.686, F1Ma=0.644]\n",
-      "(LR): 100%|████████████████████████| 5000/5000 [00:01<00:00, best test F1Mi=0.686, F1Ma=0.685]\n",
-      "(LR): 100%|████████████████████████| 5000/5000 [00:01<00:00, best test F1Mi=0.657, F1Ma=0.643]\n",
-      "(LR): 100%|████████████████████████| 5000/5000 [00:01<00:00, best test F1Mi=0.714, F1Ma=0.683]\n",
-      "(LR): 100%|████████████████████████| 5000/5000 [00:01<00:00, best test F1Mi=0.657, F1Ma=0.633]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_result = test(encoder_model, dataloader, train_test_indices[0], device)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "0730f11a",
    "metadata": {},
    "outputs": [],
@@ -736,18 +735,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "4ca9605d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "test acc mean = 67.1429 ± 1.9166\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "np_micro_f1_values = np.array(micro_f1_values)\n",
     "micro_f1_mean = np.mean(np_micro_f1_values)\n",
@@ -760,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "12d287b1",
    "metadata": {},
    "outputs": [],
